<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lort.mail.TaskActivity"
    tools:showIn="@layout/activity_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/task_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_task"
                android:maxLines="1"
                android:singleLine="true"
                android:editable="false"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/task_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_task"
                android:maxLines="1"
                android:singleLine="true"
                android:editable="false"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/task_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_task"
                android:maxLines="1"
                android:singleLine="true"
                android:editable="false"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/task_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_task"
                android:editable="false"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/rv_bar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_barcode_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/task_scan_bar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_barcode_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/task_input_bar"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
