<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lort.mail.BarEditActivity"
    tools:showIn="@layout/activity_bar_edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/bar_num_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bar_num_bar"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="none" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/bar_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_bar"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/bar_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_bar"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/bar_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_bar"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
